--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,9 @@
 		"lib": ["es2023"],
 		"module": "esnext",
 		"moduleResolution": "bundler",
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitReturns": true,
+		"noPropertyAccessFromIndexSignature": true,
 		"paths": {},
 		"rootDir": ".",
 		"skipDefaultLibCheck": true,
