--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
 	"name": "@angular-monorepo/source",
 	"version": "0.0.0",
 	"license": "MIT",
-	"scripts": {},
+	"scripts": {
+		"clean": "nx reset"
+	},
 	"private": true,
 	"dependencies": {
 		"@angular/animations": "~19.0.0",
@@ -41,6 +43,8 @@
 		"@swc/helpers": "~0.5.11",
 		"@types/jest": "^29.5.12",
 		"@types/node": "18.16.9",
+		"@typescript-eslint/eslint-plugin": "^8.19.0",
+		"@typescript-eslint/parser": "^8.19.0",
 		"@typescript-eslint/utils": "^8.13.0",
 		"angular-eslint": "^19.0.2",
 		"eslint": "^9.8.0",
