--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@angular-monorepo/source",
+	"name": "chapcahpies",
 	"version": "0.0.0",
 	"license": "MIT",
 	"scripts": {
@@ -53,6 +53,7 @@
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-preset-angular": "~14.4.0",
+		"ng-packagr": "^19.0.1",
 		"nx": "20.3.0",
 		"prettier": "^2.6.2",
 		"ts-jest": "^29.1.0",
