--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
 		"@angular/forms": "~19.0.0",
 		"@angular/platform-browser": "~19.0.0",
 		"@angular/platform-browser-dynamic": "~19.0.0",
-		"@angular/router": "~19.0.0",
-		"rxjs": "~7.8.0",
-		"zone.js": "~0.15.0"
+		"@angular/router": "~19.0.0"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "~19.0.0",
@@ -26,15 +24,15 @@
 		"@angular/compiler-cli": "~19.0.0",
 		"@angular/language-service": "~19.0.0",
 		"@eslint/js": "^9.8.0",
-		"@nx/angular": "20.3.0",
-		"@nx/devkit": "20.3.0",
-		"@nx/eslint": "20.3.0",
-		"@nx/eslint-plugin": "20.3.0",
-		"@nx/jest": "20.3.0",
-		"@nx/js": "20.3.0",
-		"@nx/playwright": "20.3.0",
-		"@nx/web": "20.3.0",
-		"@nx/workspace": "20.3.0",
+		"@nx/angular": "20.3.1",
+		"@nx/devkit": "20.3.1",
+		"@nx/eslint": "20.3.1",
+		"@nx/eslint-plugin": "20.3.1",
+		"@nx/jest": "20.3.1",
+		"@nx/js": "20.3.1",
+		"@nx/playwright": "20.3.1",
+		"@nx/web": "20.3.1",
+		"@nx/workspace": "20.3.1",
 		"@playwright/test": "^1.36.0",
 		"@schematics/angular": "~19.0.0",
 		"@stylistic/eslint-plugin-ts": "^2.12.1",
@@ -43,23 +41,23 @@
 		"@swc/helpers": "~0.5.11",
 		"@types/jest": "^29.5.12",
 		"@types/node": "18.16.9",
-		"@typescript-eslint/eslint-plugin": "^8.19.0",
-		"@typescript-eslint/parser": "^8.19.0",
-		"@typescript-eslint/utils": "^8.13.0",
+		"@typescript-eslint/eslint-plugin": "^8.19.1",
+		"@typescript-eslint/parser": "^8.19.1",
+		"@typescript-eslint/utils": "^8.19.1",
 		"angular-eslint": "^19.0.2",
-		"eslint": "^9.8.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-playwright": "^1.6.2",
+		"eslint": "^9.18.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-playwright": "^2.1.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-preset-angular": "~14.4.0",
 		"ng-packagr": "^19.0.1",
-		"nx": "20.3.0",
-		"prettier": "^2.6.2",
+		"nx": "20.3.1",
+		"prettier": "^3.4.2",
 		"ts-jest": "^29.1.0",
 		"ts-node": "10.9.1",
 		"tslib": "^2.3.0",
-		"typescript": "~5.6.2",
-		"typescript-eslint": "^8.13.0"
+		"typescript": "~5.6.3",
+		"typescript-eslint": "^8.19.1"
 	}
 }
