--- a/libs/shared-ui/project.json
+++ b/libs/shared-ui/project.json
@@ -9,8 +9,14 @@
 		"build": {
 			"executor": "@nx/angular:ng-packagr-lite"
 		},
+		"build-storybook": {
+			"executor": "@storybook/angular:build-storybook"
+		},
 		"lint": {
 			"executor": "@nx/eslint:lint"
+		},
+		"storybook": {
+			"executor": "@storybook/angular:start-storybook"
 		},
 		"test": {
 			"executor": "@nx/jest:jest"
