--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"@angular/forms": "~19.0.0",
 		"@angular/platform-browser": "~19.0.0",
 		"@angular/platform-browser-dynamic": "~19.0.0",
-		"@angular/router": "~19.0.0"
+		"@angular/router": "~19.0.0",
+		"@storybook/angular": "^8.4.7"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "~19.0.0",
@@ -31,10 +32,12 @@
 		"@nx/jest": "20.3.1",
 		"@nx/js": "20.3.1",
 		"@nx/playwright": "20.3.1",
+		"@nx/storybook": "^20.3.1",
 		"@nx/web": "20.3.1",
 		"@nx/workspace": "20.3.1",
 		"@playwright/test": "^1.36.0",
 		"@schematics/angular": "~19.0.0",
+		"@storybook/eslint-config-storybook": "^4.0.0",
 		"@stylistic/eslint-plugin-ts": "^2.12.1",
 		"@swc-node/register": "~1.9.1",
 		"@swc/core": "~1.5.7",
@@ -45,15 +48,20 @@
 		"@typescript-eslint/parser": "^8.19.1",
 		"@typescript-eslint/utils": "^8.19.1",
 		"angular-eslint": "^19.0.2",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-playwright": "^2.1.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-preset-angular": "~14.4.0",
+		"jsonc-eslint-parser": "^2.4.0",
 		"ng-packagr": "^19.0.1",
 		"nx": "20.3.1",
+		"postcss": "^8.4.49",
+		"postcss-url": "~10.1.3",
 		"prettier": "^3.4.2",
+		"storybook": "^8.4.7",
 		"ts-jest": "^29.1.0",
 		"ts-node": "10.9.1",
 		"tslib": "^2.3.0",
