--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,8 @@
 		"noImplicitReturns": true,
 		"noPropertyAccessFromIndexSignature": true,
 		"paths": {
-			"@chapchapies/shared-ui": ["libs/shared-ui/src/index.ts"]
+			"@chapchapies/shared-ui": ["libs/shared-ui/src/index.ts"],
+			"@chapchapies/storybook": ["libs/storybook/src/index.ts"]
 		},
 		"rootDir": ".",
 		"skipDefaultLibCheck": true,
