--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.0",
 	"license": "MIT",
 	"scripts": {
-		"clean": "nx reset"
+		"clean": "nx reset",
+		"sb": "nx storybook shared-ui"
 	},
 	"private": true,
 	"dependencies": {
@@ -61,7 +62,9 @@
 		"postcss": "^8.4.49",
 		"postcss-url": "~10.1.3",
 		"prettier": "^3.4.2",
+		"prettier-plugin-tailwindcss": "^0.6.9",
 		"storybook": "^8.4.7",
+		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.1.0",
 		"ts-node": "10.9.1",
 		"tslib": "^2.3.0",
