--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-	"name": "chapcahpies",
-	"version": "0.0.0",
 	"license": "MIT",
+	"name": "chapcahpies",
+	"private": true,
 	"scripts": {
 		"clean": "nx reset",
 		"sb": "nx storybook shared-ui"
 	},
-	"private": true,
+	"type": "module",
+	"version": "0.0.0",
 	"dependencies": {
 		"@angular/animations": "~19.0.0",
 		"@angular/common": "~19.0.0",
@@ -16,7 +17,9 @@
 		"@angular/platform-browser": "~19.0.0",
 		"@angular/platform-browser-dynamic": "~19.0.0",
 		"@angular/router": "~19.0.0",
-		"@storybook/angular": "^8.4.7"
+		"@storybook/angular": "^8.4.7",
+		"iconoir": "^7.10.1",
+		"ngxtension": "^4.2.0"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "~19.0.0",
@@ -44,14 +47,14 @@
 		"@swc/core": "~1.5.7",
 		"@swc/helpers": "~0.5.11",
 		"@types/jest": "^29.5.12",
-		"@types/node": "18.16.9",
+		"@types/node": "20.12.2",
 		"@typescript-eslint/eslint-plugin": "^8.19.1",
 		"@typescript-eslint/parser": "^8.19.1",
 		"@typescript-eslint/utils": "^8.19.1",
 		"angular-eslint": "^19.0.2",
 		"autoprefixer": "^10.4.20",
+		"copy-webpack-plugin": "^12.0.2",
 		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-playwright": "^2.1.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
@@ -69,6 +72,7 @@
 		"ts-node": "10.9.1",
 		"tslib": "^2.3.0",
 		"typescript": "~5.6.3",
-		"typescript-eslint": "^8.19.1"
+		"typescript-eslint": "^8.19.1",
+		"webpack": "^5.97.1"
 	}
 }
