--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,6 +4,7 @@
 		"baseUrl": ".",
 		"declaration": false,
 		"emitDecoratorMetadata": true,
+		"esModuleInterop": true,
 		"experimentalDecorators": true,
 		"importHelpers": true,
 		"lib": ["es2023"],
@@ -14,6 +15,7 @@
 		"noImplicitReturns": true,
 		"noPropertyAccessFromIndexSignature": true,
 		"paths": {
+			"@chapchapies/icons": ["libs/icons/src/index.ts"],
 			"@chapchapies/shared-ui": ["libs/shared-ui/src/index.ts"],
 			"@chapchapies/storybook": ["libs/storybook/src/index.ts"]
 		},
