added some basic components

--- a/libs/shared-ui/package.json
+++ b/libs/shared-ui/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@chapchapies/ui-components",
+	"name": "@chapchapies/shared-ui",
 	"version": "0.0.1",
 	"type": "module",
 	"peerDependencies": {
