--- a/package.json
+++ b/package.json
@@ -9,60 +9,60 @@
 	"type": "module",
 	"version": "0.0.0",
 	"dependencies": {
-		"@angular/animations": "~19.0.0",
-		"@angular/common": "~19.0.0",
-		"@angular/compiler": "~19.0.0",
-		"@angular/core": "~19.0.0",
-		"@angular/forms": "~19.0.0",
-		"@angular/platform-browser": "~19.0.0",
-		"@angular/platform-browser-dynamic": "~19.0.0",
-		"@angular/router": "~19.0.0",
+		"@angular/animations": "19.1.5",
+		"@angular/common": "19.1.5",
+		"@angular/compiler": "19.1.5",
+		"@angular/core": "19.1.5",
+		"@angular/forms": "19.1.5",
+		"@angular/platform-browser": "19.1.5",
+		"@angular/platform-browser-dynamic": "19.1.5",
+		"@angular/router": "19.1.5",
 		"@storybook/angular": "^8.4.7",
 		"iconoir": "^7.10.1",
 		"ngxtension": "^4.2.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~19.0.0",
-		"@angular-devkit/core": "~19.0.0",
-		"@angular-devkit/schematics": "~19.0.0",
-		"@angular/cli": "~19.0.0",
-		"@angular/compiler-cli": "~19.0.0",
-		"@angular/language-service": "~19.0.0",
-		"@eslint/js": "^9.8.0",
-		"@nx/angular": "20.3.1",
-		"@nx/devkit": "20.3.1",
-		"@nx/eslint": "20.3.1",
-		"@nx/eslint-plugin": "20.3.1",
-		"@nx/jest": "20.3.1",
-		"@nx/js": "20.3.1",
-		"@nx/playwright": "20.3.1",
-		"@nx/storybook": "^20.3.1",
-		"@nx/web": "20.3.1",
-		"@nx/workspace": "20.3.1",
+		"@angular-devkit/build-angular": "19.1.5",
+		"@angular-devkit/core": "19.1.5",
+		"@angular-devkit/schematics": "19.1.5",
+		"@angular/cli": "19.1.5",
+		"@angular/compiler-cli": "19.1.5",
+		"@angular/language-service": "19.1.5",
+		"@nx/angular": "20.4.1",
+		"@nx/devkit": "20.4.1",
+		"@nx/eslint": "20.4.1",
+		"@nx/eslint-plugin": "20.4.1",
+		"@nx/jest": "20.4.1",
+		"@nx/js": "20.4.1",
+		"@nx/playwright": "20.4.1",
+		"@nx/storybook": "20.4.1",
+		"@nx/web": "20.4.1",
+		"@nx/workspace": "20.4.1",
 		"@playwright/test": "^1.36.0",
-		"@schematics/angular": "~19.0.0",
+		"@schematics/angular": "19.1.5",
 		"@storybook/addon-essentials": "^8.5.1",
 		"@storybook/eslint-config-storybook": "^4.0.0",
-		"@stylistic/eslint-plugin-ts": "^2.12.1",
+		"@stylistic/eslint-plugin-ts": "3.0.1",
 		"@swc-node/register": "~1.9.1",
 		"@swc/core": "~1.5.7",
 		"@swc/helpers": "~0.5.11",
+		"@tailwindcss/postcss": "^4.0.3",
 		"@types/jest": "^29.5.12",
 		"@types/node": "20.12.2",
-		"@typescript-eslint/eslint-plugin": "^8.19.1",
-		"@typescript-eslint/parser": "^8.19.1",
-		"@typescript-eslint/utils": "^8.19.1",
+		"@typescript-eslint/eslint-plugin": "8.23.0",
+		"@typescript-eslint/parser": "8.23.0",
+		"@typescript-eslint/utils": "8.23.0",
 		"angular-eslint": "^19.0.2",
 		"autoprefixer": "^10.4.20",
 		"copy-webpack-plugin": "^12.0.2",
-		"eslint": "^9.18.0",
+		"eslint": "9.19.0",
 		"eslint-plugin-playwright": "^2.1.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-preset-angular": "~14.4.0",
 		"jsonc-eslint-parser": "^2.4.0",
 		"ng-packagr": "^19.0.1",
-		"nx": "20.3.1",
+		"nx": "20.4.1",
 		"postcss": "^8.4.49",
 		"postcss-url": "~10.1.3",
 		"prettier": "^3.4.2",
@@ -72,8 +72,8 @@
 		"ts-jest": "^29.1.0",
 		"ts-node": "10.9.1",
 		"tslib": "^2.3.0",
-		"typescript": "~5.6.3",
-		"typescript-eslint": "^8.19.1",
+		"typescript": "5.7.3",
+		"typescript-eslint": "8.23.0",
 		"webpack": "^5.97.1"
 	}
 }
