--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
 		"@angular/platform-browser": "19.1.5",
 		"@angular/platform-browser-dynamic": "19.1.5",
 		"@angular/router": "19.1.5",
-		"@storybook/angular": "^8.4.7",
+		"@storybook/angular": "8.5.3",
 		"iconoir": "^7.10.1",
-		"ngxtension": "^4.2.0"
+		"ngxtension": "4.3.2"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "19.1.5",
@@ -40,34 +40,33 @@
 		"@nx/workspace": "20.4.1",
 		"@playwright/test": "^1.36.0",
 		"@schematics/angular": "19.1.5",
-		"@storybook/addon-essentials": "^8.5.1",
+		"@storybook/addon-essentials": "8.5.3",
 		"@storybook/eslint-config-storybook": "^4.0.0",
-		"@stylistic/eslint-plugin-ts": "3.0.1",
+		"@stylistic/eslint-plugin-ts": "3.1.0",
 		"@swc-node/register": "~1.9.1",
 		"@swc/core": "~1.5.7",
 		"@swc/helpers": "~0.5.11",
-		"@tailwindcss/postcss": "^4.0.3",
 		"@types/jest": "^29.5.12",
 		"@types/node": "20.12.2",
 		"@typescript-eslint/eslint-plugin": "8.23.0",
 		"@typescript-eslint/parser": "8.23.0",
 		"@typescript-eslint/utils": "8.23.0",
 		"angular-eslint": "^19.0.2",
-		"autoprefixer": "^10.4.20",
+		"autoprefixer": "10.4.20",
 		"copy-webpack-plugin": "^12.0.2",
-		"eslint": "9.19.0",
+		"eslint": "9.20.0",
 		"eslint-plugin-playwright": "^2.1.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-preset-angular": "~14.4.0",
 		"jsonc-eslint-parser": "^2.4.0",
-		"ng-packagr": "^19.0.1",
+		"ng-packagr": "19.1.2",
 		"nx": "20.4.1",
-		"postcss": "^8.4.49",
-		"postcss-url": "~10.1.3",
+		"postcss": "8.5.1",
+		"postcss-url": "10.1.3",
 		"prettier": "^3.4.2",
-		"prettier-plugin-tailwindcss": "^0.6.9",
-		"storybook": "^8.4.7",
+		"prettier-plugin-tailwindcss": "0.6.11",
+		"storybook": "8.5.3",
 		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.1.0",
 		"ts-node": "10.9.1",
