--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@angular/platform-browser": "19.1.5",
 		"@angular/platform-browser-dynamic": "19.1.5",
 		"@angular/router": "19.1.5",
-		"@storybook/angular": "8.5.3",
+		"@storybook/angular": "8.5.6",
 		"iconoir": "^7.10.1",
 		"ngxtension": "4.3.2"
 	},
@@ -40,8 +40,8 @@
 		"@nx/workspace": "20.4.1",
 		"@playwright/test": "^1.36.0",
 		"@schematics/angular": "19.1.5",
-		"@storybook/addon-essentials": "8.5.3",
-		"@storybook/eslint-config-storybook": "^4.0.0",
+		"@storybook/addon-essentials": "8.5.6",
+		"@storybook/eslint-config-storybook": "4.0.0",
 		"@stylistic/eslint-plugin-ts": "3.1.0",
 		"@swc-node/register": "~1.9.1",
 		"@swc/core": "~1.5.7",
@@ -58,6 +58,7 @@
 		"eslint-plugin-playwright": "^2.1.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"jest-environment-node": "^29.7.0",
 		"jest-preset-angular": "~14.4.0",
 		"jsonc-eslint-parser": "^2.4.0",
 		"ng-packagr": "19.1.2",
@@ -66,7 +67,7 @@
 		"postcss-url": "10.1.3",
 		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "0.6.11",
-		"storybook": "8.5.3",
+		"storybook": "8.5.6",
 		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.1.0",
 		"ts-node": "10.9.1",
