--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"scripts": {
 		"clean": "nx reset",
-		"sb": "nx storybook shared-ui"
+		"sb-client": "nx storybook client",
+		"sb-shared-ui": "nx storybook shared-ui"
 	},
 	"type": "module",
 	"version": "0.0.0",
@@ -17,7 +18,7 @@
 		"@angular/platform-browser": "19.1.5",
 		"@angular/platform-browser-dynamic": "19.1.5",
 		"@angular/router": "19.1.5",
-		"@storybook/angular": "8.5.6",
+		"@storybook/angular": "^8.6.0",
 		"iconoir": "^7.10.1",
 		"ngxtension": "4.3.2"
 	},
@@ -28,19 +29,19 @@
 		"@angular/cli": "19.1.5",
 		"@angular/compiler-cli": "19.1.5",
 		"@angular/language-service": "19.1.5",
-		"@nx/angular": "20.4.1",
-		"@nx/devkit": "20.4.1",
-		"@nx/eslint": "20.4.1",
-		"@nx/eslint-plugin": "20.4.1",
-		"@nx/jest": "20.4.1",
-		"@nx/js": "20.4.1",
-		"@nx/playwright": "20.4.1",
-		"@nx/storybook": "20.4.1",
-		"@nx/web": "20.4.1",
-		"@nx/workspace": "20.4.1",
+		"@nx/angular": "20.4.6",
+		"@nx/devkit": "20.4.6",
+		"@nx/eslint": "20.4.6",
+		"@nx/eslint-plugin": "20.4.6",
+		"@nx/jest": "20.4.6",
+		"@nx/js": "20.4.6",
+		"@nx/playwright": "20.4.6",
+		"@nx/storybook": "20.4.6",
+		"@nx/web": "20.4.6",
+		"@nx/workspace": "20.4.6",
 		"@playwright/test": "^1.36.0",
 		"@schematics/angular": "19.1.5",
-		"@storybook/addon-essentials": "8.5.6",
+		"@storybook/addon-essentials": "^8.6.0",
 		"@storybook/eslint-config-storybook": "4.0.0",
 		"@stylistic/eslint-plugin-ts": "3.1.0",
 		"@swc-node/register": "~1.9.1",
@@ -62,12 +63,12 @@
 		"jest-preset-angular": "~14.4.0",
 		"jsonc-eslint-parser": "^2.4.0",
 		"ng-packagr": "19.1.2",
-		"nx": "20.4.1",
+		"nx": "20.4.6",
 		"postcss": "8.5.1",
 		"postcss-url": "10.1.3",
 		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "0.6.11",
-		"storybook": "8.5.6",
+		"storybook": "^8.6.0",
 		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.1.0",
 		"ts-node": "10.9.1",
