--- a/nx.json
+++ b/nx.json
@@ -26,6 +26,7 @@
 				}
 			},
 			"dependsOn": ["^build"],
+			"executor": "@nx/webpack:webpack",
 			"options": {
 				"assets": ["{projectRoot}/src/assets"],
 				"compiler": "tsc",
