--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"clean": "nx reset",
 		"sb-client": "nx storybook client",
-		"sb-shared-ui": "nx storybook shared-ui"
+		"sb-shared-ui": "nx storybook shared-ui",
+		"dev": "nx run client:serve:development"
 	},
 	"type": "module",
 	"version": "0.0.0",
@@ -18,7 +19,7 @@
 		"@angular/platform-browser": "19.1.5",
 		"@angular/platform-browser-dynamic": "19.1.5",
 		"@angular/router": "19.1.5",
-		"@storybook/angular": "^8.6.0",
+		"@storybook/angular": "^8.6.2",
 		"iconoir": "^7.10.1",
 		"ngxtension": "4.3.2"
 	},
@@ -41,40 +42,40 @@
 		"@nx/workspace": "20.4.6",
 		"@playwright/test": "^1.36.0",
 		"@schematics/angular": "19.1.5",
-		"@storybook/addon-essentials": "^8.6.0",
+		"@storybook/addon-essentials": "^8.6.2",
 		"@storybook/eslint-config-storybook": "4.0.0",
-		"@stylistic/eslint-plugin-ts": "3.1.0",
+		"@stylistic/eslint-plugin-ts": "4.1.0",
 		"@swc-node/register": "~1.9.1",
 		"@swc/core": "~1.5.7",
 		"@swc/helpers": "~0.5.11",
 		"@types/jest": "^29.5.12",
 		"@types/node": "20.12.2",
-		"@typescript-eslint/eslint-plugin": "8.23.0",
-		"@typescript-eslint/parser": "8.23.0",
-		"@typescript-eslint/utils": "8.23.0",
-		"angular-eslint": "^19.0.2",
+		"@typescript-eslint/eslint-plugin": "8.25.0",
+		"@typescript-eslint/parser": "8.25.0",
+		"@typescript-eslint/utils": "8.25.0",
+		"angular-eslint": "^19.1.0",
 		"autoprefixer": "10.4.20",
 		"copy-webpack-plugin": "^12.0.2",
-		"eslint": "9.20.0",
-		"eslint-plugin-playwright": "^2.1.0",
+		"eslint": "9.21.0",
+		"eslint-plugin-playwright": "^2.2.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-environment-node": "^29.7.0",
-		"jest-preset-angular": "~14.4.0",
+		"jest-preset-angular": "~14.5.3",
 		"jsonc-eslint-parser": "^2.4.0",
 		"ng-packagr": "19.1.2",
 		"nx": "20.4.6",
-		"postcss": "8.5.1",
+		"postcss": "8.5.3",
 		"postcss-url": "10.1.3",
-		"prettier": "^3.4.2",
+		"prettier": "^3.5.2",
 		"prettier-plugin-tailwindcss": "0.6.11",
-		"storybook": "^8.6.0",
+		"storybook": "^8.6.2",
 		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.1.0",
 		"ts-node": "10.9.1",
 		"tslib": "^2.3.0",
 		"typescript": "5.7.3",
-		"typescript-eslint": "8.23.0",
+		"typescript-eslint": "8.25.0",
 		"webpack": "^5.97.1"
 	}
 }
