--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"name": "chapchapies",
 	"private": true,
 	"scripts": {
+		"build": "nx run-many --target build --all --parallel=4",
 		"clean": "nx reset",
+		"cb": "npm run clean && npm run build",
 		"sb-client": "nx storybook client",
 		"sb-shared-ui": "nx storybook shared-ui",
 		"dev": "nx run client:serve:development"
@@ -19,9 +21,16 @@
 		"@angular/platform-browser": "19.1.5",
 		"@angular/platform-browser-dynamic": "19.1.5",
 		"@angular/router": "19.1.5",
+		"@nestjs/axios": "4.0.0",
+		"@nestjs/common": "11.0.11",
+		"@nestjs/core": "11.0.11",
+		"@nestjs/platform-fastify": "11.0.11",
 		"@storybook/angular": "^8.6.2",
+		"axios": "1.8.1",
 		"iconoir": "^7.10.1",
-		"ngxtension": "4.3.2"
+		"ngxtension": "4.3.2",
+		"reflect-metadata": "0.2.2",
+		"rxjs": "7.8.2"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "19.1.5",
@@ -30,24 +39,29 @@
 		"@angular/cli": "19.1.5",
 		"@angular/compiler-cli": "19.1.5",
 		"@angular/language-service": "19.1.5",
+		"@nestjs/schematics": "11.0.2",
+		"@nestjs/testing": "11.0.11",
 		"@nx/angular": "20.4.6",
 		"@nx/devkit": "20.4.6",
 		"@nx/eslint": "20.4.6",
 		"@nx/eslint-plugin": "20.4.6",
 		"@nx/jest": "20.4.6",
 		"@nx/js": "20.4.6",
+		"@nx/nest": "20.4.6",
+		"@nx/node": "20.4.6",
 		"@nx/playwright": "20.4.6",
 		"@nx/storybook": "20.4.6",
 		"@nx/web": "20.4.6",
+		"@nx/webpack": "20.4.6",
 		"@nx/workspace": "20.4.6",
 		"@playwright/test": "^1.36.0",
 		"@schematics/angular": "19.1.5",
 		"@storybook/addon-essentials": "^8.6.2",
 		"@storybook/eslint-config-storybook": "4.0.0",
 		"@stylistic/eslint-plugin-ts": "4.1.0",
-		"@swc-node/register": "~1.9.1",
-		"@swc/core": "~1.5.7",
-		"@swc/helpers": "~0.5.11",
+		"@swc-node/register": "1.10.9",
+		"@swc/core": "1.11.7",
+		"@swc/helpers": "0.5.15",
 		"@types/jest": "^29.5.12",
 		"@types/node": "20.12.2",
 		"@typescript-eslint/eslint-plugin": "8.25.0",
@@ -70,12 +84,14 @@
 		"prettier": "^3.5.2",
 		"prettier-plugin-tailwindcss": "0.6.11",
 		"storybook": "^8.6.2",
+		"swc-loader": "^0.2.6",
 		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.1.0",
 		"ts-node": "10.9.1",
 		"tslib": "^2.3.0",
 		"typescript": "5.7.3",
 		"typescript-eslint": "8.25.0",
-		"webpack": "^5.97.1"
+		"webpack": "5.98.0",
+		"webpack-cli": "^6.0.1"
 	}
 }
