--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,7 +24,9 @@
 		"skipDefaultLibCheck": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"target": "esnext"
+		"target": "esnext",
+		"strict": true,
+		"strictNullChecks": true
 	},
 	"exclude": ["node_modules", "tmp"]
 }
