--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -7,8 +7,6 @@
 		"strictTemplates": true
 	},
 	"compilerOptions": {
-		"lib": ["es2022", "dom"],
-		"strict": true,
-		"strictNullChecks": true
+		"lib": ["es2022", "dom"]
 	}
 }
