--- a/package.json
+++ b/package.json
@@ -21,13 +21,22 @@
 		"@angular/platform-browser": "19.1.5",
 		"@angular/platform-browser-dynamic": "19.1.5",
 		"@angular/router": "19.1.5",
+		"@apollo/server": "4.11.3",
+		"@apollo/subgraph": "2.10.0",
+		"@as-integrations/fastify": "2.1.1",
+		"@nestjs/apollo": "13.0.3",
 		"@nestjs/axios": "4.0.0",
 		"@nestjs/common": "11.0.11",
+		"@nestjs/config": "^4.0.1",
 		"@nestjs/core": "11.0.11",
+		"@nestjs/graphql": "13.0.3",
 		"@nestjs/platform-fastify": "11.0.11",
-		"@storybook/angular": "^8.6.2",
+		"@storybook/angular": "8.6.4",
 		"axios": "1.8.1",
-		"iconoir": "^7.10.1",
+		"dotenv": "16.4.7",
+		"fs-extra": "11.3.0",
+		"graphql": "16.10.0",
+		"iconoir": "7.10.1",
 		"ngxtension": "4.3.2",
 		"reflect-metadata": "0.2.2",
 		"rxjs": "7.8.2"
@@ -39,6 +48,10 @@
 		"@angular/cli": "19.1.5",
 		"@angular/compiler-cli": "19.1.5",
 		"@angular/language-service": "19.1.5",
+		"@graphql-codegen/cli": "5.0.5",
+		"@graphql-codegen/typescript": "4.1.5",
+		"@graphql-codegen/typescript-apollo-angular": "4.0.0",
+		"@graphql-codegen/typescript-operations": "4.5.1",
 		"@nestjs/schematics": "11.0.2",
 		"@nestjs/testing": "11.0.11",
 		"@nx/angular": "20.4.6",
@@ -50,18 +63,21 @@
 		"@nx/nest": "20.4.6",
 		"@nx/node": "20.4.6",
 		"@nx/playwright": "20.4.6",
+		"@nx/plugin": "20.4.6",
 		"@nx/storybook": "20.4.6",
 		"@nx/web": "20.4.6",
 		"@nx/webpack": "20.4.6",
 		"@nx/workspace": "20.4.6",
 		"@playwright/test": "^1.36.0",
 		"@schematics/angular": "19.1.5",
-		"@storybook/addon-essentials": "^8.6.2",
+		"@storybook/addon-essentials": "8.6.4",
 		"@storybook/eslint-config-storybook": "4.0.0",
 		"@stylistic/eslint-plugin-ts": "4.1.0",
 		"@swc-node/register": "1.10.9",
+		"@swc/cli": "~0.3.12",
 		"@swc/core": "1.11.7",
 		"@swc/helpers": "0.5.15",
+		"@types/fs-extra": "11.0.4",
 		"@types/jest": "^29.5.12",
 		"@types/node": "20.12.2",
 		"@typescript-eslint/eslint-plugin": "8.25.0",
@@ -76,14 +92,14 @@
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-environment-node": "^29.7.0",
 		"jest-preset-angular": "~14.5.3",
-		"jsonc-eslint-parser": "^2.4.0",
+		"jsonc-eslint-parser": "2.4.0",
 		"ng-packagr": "19.1.2",
 		"nx": "20.4.6",
 		"postcss": "8.5.3",
 		"postcss-url": "10.1.3",
 		"prettier": "^3.5.2",
 		"prettier-plugin-tailwindcss": "0.6.11",
-		"storybook": "^8.6.2",
+		"storybook": "8.6.4",
 		"swc-loader": "^0.2.6",
 		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.1.0",
