--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
 	"type": "module",
 	"version": "0.0.0",
 	"dependencies": {
-		"@angular/animations": "19.1.5",
-		"@angular/common": "19.1.5",
-		"@angular/compiler": "19.1.5",
-		"@angular/core": "19.1.5",
-		"@angular/forms": "19.1.5",
-		"@angular/platform-browser": "19.1.5",
-		"@angular/platform-browser-dynamic": "19.1.5",
-		"@angular/router": "19.1.5",
+		"@angular/animations": "19.2.1",
+		"@angular/common": "19.2.1",
+		"@angular/compiler": "19.2.1",
+		"@angular/core": "19.2.1",
+		"@angular/forms": "19.2.1",
+		"@angular/platform-browser": "19.2.1",
+		"@angular/platform-browser-dynamic": "19.2.1",
+		"@angular/router": "19.2.1",
 		"@apollo/server": "4.11.3",
 		"@apollo/subgraph": "2.10.0",
 		"@as-integrations/fastify": "2.1.1",
@@ -42,39 +42,38 @@
 		"rxjs": "7.8.2"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "19.1.5",
-		"@angular-devkit/core": "19.1.5",
-		"@angular-devkit/schematics": "19.1.5",
-		"@angular/cli": "19.1.5",
-		"@angular/compiler-cli": "19.1.5",
-		"@angular/language-service": "19.1.5",
+		"@angular-devkit/build-angular": "19.2.1",
+		"@angular-devkit/core": "19.2.1",
+		"@angular-devkit/schematics": "19.2.1",
+		"@angular/cli": "~19.2.0",
+		"@angular/compiler-cli": "19.2.1",
+		"@angular/language-service": "19.2.1",
 		"@graphql-codegen/cli": "5.0.5",
 		"@graphql-codegen/typescript": "4.1.5",
 		"@graphql-codegen/typescript-apollo-angular": "4.0.0",
 		"@graphql-codegen/typescript-operations": "4.5.1",
 		"@nestjs/schematics": "11.0.2",
 		"@nestjs/testing": "11.0.11",
-		"@nx/angular": "20.4.6",
-		"@nx/devkit": "20.4.6",
-		"@nx/eslint": "20.4.6",
-		"@nx/eslint-plugin": "20.4.6",
-		"@nx/jest": "20.4.6",
-		"@nx/js": "20.4.6",
-		"@nx/nest": "20.4.6",
-		"@nx/node": "20.4.6",
-		"@nx/playwright": "20.4.6",
-		"@nx/plugin": "20.4.6",
-		"@nx/storybook": "20.4.6",
-		"@nx/web": "20.4.6",
-		"@nx/webpack": "20.4.6",
-		"@nx/workspace": "20.4.6",
+		"@nx/angular": "20.5.0",
+		"@nx/devkit": "20.5.0",
+		"@nx/eslint": "20.5.0",
+		"@nx/eslint-plugin": "20.5.0",
+		"@nx/jest": "20.5.0",
+		"@nx/js": "20.5.0",
+		"@nx/nest": "20.5.0",
+		"@nx/node": "20.5.0",
+		"@nx/playwright": "20.5.0",
+		"@nx/plugin": "20.5.0",
+		"@nx/storybook": "20.5.0",
+		"@nx/web": "20.5.0",
+		"@nx/webpack": "20.5.0",
+		"@nx/workspace": "20.5.0",
 		"@playwright/test": "^1.36.0",
-		"@schematics/angular": "19.1.5",
+		"@schematics/angular": "19.2.1",
 		"@storybook/addon-essentials": "8.6.4",
 		"@storybook/eslint-config-storybook": "4.0.0",
 		"@stylistic/eslint-plugin-ts": "4.1.0",
 		"@swc-node/register": "1.10.9",
-		"@swc/cli": "~0.3.12",
 		"@swc/core": "1.11.7",
 		"@swc/helpers": "0.5.15",
 		"@types/fs-extra": "11.0.4",
@@ -83,7 +82,7 @@
 		"@typescript-eslint/eslint-plugin": "8.25.0",
 		"@typescript-eslint/parser": "8.25.0",
 		"@typescript-eslint/utils": "8.25.0",
-		"angular-eslint": "^19.1.0",
+		"angular-eslint": "19.2.0",
 		"autoprefixer": "10.4.20",
 		"copy-webpack-plugin": "^12.0.2",
 		"eslint": "9.21.0",
@@ -93,8 +92,8 @@
 		"jest-environment-node": "^29.7.0",
 		"jest-preset-angular": "~14.5.3",
 		"jsonc-eslint-parser": "2.4.0",
-		"ng-packagr": "19.1.2",
-		"nx": "20.4.6",
+		"ng-packagr": "19.2.0",
+		"nx": "20.5.0",
 		"postcss": "8.5.3",
 		"postcss-url": "10.1.3",
 		"prettier": "^3.5.2",
