generating gql schema

--- a/apps/management/project.json
+++ b/apps/management/project.json
@@ -8,6 +8,9 @@
 		"build": {
 			"executor": "@nx/webpack:webpack"
 		},
+		"generate-schemas": {
+			"executor": "@chapchapies/tools:generate-schemas"
+		},
 		"serve": {
 			"executor": "@nx/js:node",
 			"options": {
