--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+.nx
+generated
+
 # compiled output
 dist
-tmp
 out-tsc
+tmp
 
 # dependencies
 node_modules
