--- a/libs/tools/package.json
+++ b/libs/tools/package.json
@@ -1,11 +1,12 @@
 {
-	"name": "@chapchapies/shared-lib",
+	"name": "@chapchapies/tools",
 	"version": "0.0.1",
-	"private": true,
-	"type": "commonjs",
+	"type": "module",
 	"main": "./src/index.js",
 	"types": "./src/index.d.ts",
 	"dependencies": {
+		"@nx/devkit": "20.5.0",
 		"tslib": "^2.3.0"
-	}
+	},
+	"executors": "./executors.json"
 }
