--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
 		"@nestjs/graphql": "13.0.3",
 		"@nestjs/platform-fastify": "11.0.11",
 		"@storybook/angular": "8.6.4",
-		"axios": "1.8.1",
+		"axios": "1.8.2",
 		"dotenv": "16.4.7",
 		"fs-extra": "11.3.0",
 		"graphql": "16.10.0",
 		"iconoir": "7.10.1",
 		"ngxtension": "4.3.2",
 		"reflect-metadata": "0.2.2",
-		"rxjs": "7.8.2"
+		"rxjs": "7.8.2",
+		"uuid": "11.1.0"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "19.2.1",
@@ -72,20 +73,21 @@
 		"@schematics/angular": "19.2.1",
 		"@storybook/addon-essentials": "8.6.4",
 		"@storybook/eslint-config-storybook": "4.0.0",
-		"@stylistic/eslint-plugin-ts": "4.1.0",
+		"@stylistic/eslint-plugin-ts": "4.2.0",
 		"@swc-node/register": "1.10.9",
-		"@swc/core": "1.11.7",
+		"@swc/cli": "0.6.0",
+		"@swc/core": "1.11.8",
 		"@swc/helpers": "0.5.15",
 		"@types/fs-extra": "11.0.4",
 		"@types/jest": "^29.5.12",
 		"@types/node": "20.12.2",
-		"@typescript-eslint/eslint-plugin": "8.25.0",
-		"@typescript-eslint/parser": "8.25.0",
-		"@typescript-eslint/utils": "8.25.0",
+		"@typescript-eslint/eslint-plugin": "8.26.0",
+		"@typescript-eslint/parser": "8.26.0",
+		"@typescript-eslint/utils": "8.26.0",
 		"angular-eslint": "19.2.0",
 		"autoprefixer": "10.4.20",
 		"copy-webpack-plugin": "^12.0.2",
-		"eslint": "9.21.0",
+		"eslint": "9.22.0",
 		"eslint-plugin-playwright": "^2.2.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
@@ -96,7 +98,7 @@
 		"nx": "20.5.0",
 		"postcss": "8.5.3",
 		"postcss-url": "10.1.3",
-		"prettier": "^3.5.2",
+		"prettier": "3.5.3",
 		"prettier-plugin-tailwindcss": "0.6.11",
 		"storybook": "8.6.4",
 		"swc-loader": "^0.2.6",
@@ -105,7 +107,7 @@
 		"ts-node": "10.9.1",
 		"tslib": "^2.3.0",
 		"typescript": "5.7.3",
-		"typescript-eslint": "8.25.0",
+		"typescript-eslint": "8.26.0",
 		"webpack": "5.98.0",
 		"webpack-cli": "^6.0.1"
 	}
