--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
 	"name": "chapchapies",
 	"private": true,
 	"scripts": {
-		"build": "nx run-many --target build --all --parallel=4",
+		"build": "nx run-many --target build --all --parallel=4 --verbose",
 		"clean": "tsx scripts/clean.ts & nx reset",
 		"cb": "npm run clean && npm run build",
 		"sb-client": "nx storybook client",
 		"sb-shared-ui": "nx storybook shared-ui",
-		"dev": "nx run client:serve:development"
+		"dev": "nx run client-host:serve:development"
 	},
 	"type": "module",
 	"version": "0.0.0",
@@ -21,23 +21,27 @@
 		"@angular/platform-browser": "19.2.1",
 		"@angular/platform-browser-dynamic": "19.2.1",
 		"@angular/router": "19.2.1",
+		"@apollo/client": "3.13.8",
 		"@apollo/server": "4.11.3",
-		"@apollo/subgraph": "2.10.0",
+		"@apollo/subgraph": "2.10.2",
 		"@as-integrations/fastify": "2.1.1",
 		"@nestjs/apollo": "13.0.3",
 		"@nestjs/axios": "4.0.0",
 		"@nestjs/common": "11.0.11",
-		"@nestjs/config": "^4.0.1",
+		"@nestjs/config": "^4.0.2",
 		"@nestjs/core": "11.0.11",
 		"@nestjs/graphql": "13.0.3",
 		"@nestjs/platform-fastify": "11.0.11",
-		"@storybook/angular": "8.6.4",
+		"@storybook/angular": "8.6.12",
+		"apollo-angular": "10.0.3",
 		"axios": "1.8.2",
 		"dotenv": "16.4.7",
 		"fs-extra": "11.3.0",
-		"graphql": "16.10.0",
+		"glob": "^11.0.2",
+		"graphql": "16.11.0",
 		"iconoir": "7.10.1",
 		"ngxtension": "4.3.2",
+		"node-delete": "^0.1.2",
 		"reflect-metadata": "0.2.2",
 		"rxjs": "7.8.2",
 		"uuid": "11.1.0"
@@ -49,11 +53,13 @@
 		"@angular/cli": "~19.2.0",
 		"@angular/compiler-cli": "19.2.1",
 		"@angular/language-service": "19.2.1",
-		"@graphql-codegen/cli": "5.0.5",
-		"@graphql-codegen/typescript": "4.1.5",
+		"@graphql-codegen/cli": "5.0.6",
+		"@graphql-codegen/fragment-matcher": "^5.1.0",
+		"@graphql-codegen/near-operation-file-preset": "3.0.0",
+		"@graphql-codegen/typescript": "4.1.6",
 		"@graphql-codegen/typescript-apollo-angular": "4.0.0",
-		"@graphql-codegen/typescript-operations": "4.5.1",
-		"@nestjs/schematics": "11.0.2",
+		"@graphql-codegen/typescript-operations": "4.6.1",
+		"@nestjs/schematics": "11.0.5",
 		"@nestjs/testing": "11.0.11",
 		"@nx/angular": "20.5.0",
 		"@nx/devkit": "20.5.0",
@@ -70,8 +76,8 @@
 		"@nx/webpack": "20.5.0",
 		"@nx/workspace": "20.5.0",
 		"@playwright/test": "^1.36.0",
-		"@schematics/angular": "19.2.1",
-		"@storybook/addon-essentials": "8.6.4",
+		"@schematics/angular": "19.2.11",
+		"@storybook/addon-essentials": "8.6.12",
 		"@storybook/eslint-config-storybook": "4.0.0",
 		"@stylistic/eslint-plugin-ts": "4.2.0",
 		"@swc-node/register": "1.10.9",
@@ -85,28 +91,28 @@
 		"@typescript-eslint/parser": "8.26.0",
 		"@typescript-eslint/utils": "8.26.0",
 		"angular-eslint": "19.2.0",
-		"autoprefixer": "10.4.20",
+		"autoprefixer": "10.4.21",
 		"copy-webpack-plugin": "^12.0.2",
 		"eslint": "9.22.0",
 		"eslint-plugin-playwright": "^2.2.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-environment-node": "^29.7.0",
-		"jest-preset-angular": "~14.5.3",
+		"jest-preset-angular": "~14.5.5",
 		"jsonc-eslint-parser": "2.4.0",
-		"ng-packagr": "19.2.0",
+		"ng-packagr": "19.2.2",
 		"nx": "20.5.0",
 		"postcss": "8.5.3",
 		"postcss-url": "10.1.3",
 		"prettier": "3.5.3",
 		"prettier-plugin-tailwindcss": "0.6.11",
-		"storybook": "8.6.4",
+		"storybook": "8.6.12",
 		"swc-loader": "^0.2.6",
 		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.1.0",
-		"ts-node": "10.9.1",
+		"ts-node": "10.9.2",
 		"tslib": "2.8.1",
-		"tsx": "4.19.3",
+		"tsx": "4.19.4",
 		"typescript": "5.7.3",
 		"typescript-eslint": "8.26.0",
 		"webpack": "5.98.0",
