--- a/package.json
+++ b/package.json
@@ -83,9 +83,9 @@
 		"@storybook/eslint-config-storybook": "4.0.0",
 		"@stylistic/eslint-plugin-ts": "4.2.0",
 		"@swc-node/register": "1.10.9",
-		"@swc/cli": "0.6.0",
-		"@swc/core": "1.11.8",
-		"@swc/helpers": "0.5.15",
+		"@swc/cli": "0.7.7",
+		"@swc/core": "1.11.31",
+		"@swc/helpers": "0.5.17",
 		"@types/fs-extra": "11.0.4",
 		"@types/jest": "^29.5.12",
 		"@types/node": "20.12.2",
@@ -109,7 +109,7 @@
 		"prettier": "3.5.3",
 		"prettier-plugin-tailwindcss": "0.6.11",
 		"storybook": "8.6.14",
-		"swc-loader": "^0.2.6",
+		"swc-loader": "0.2.6",
 		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.1.0",
 		"ts-node": "10.9.2",
